--- a/jenkinsFile
+++ b/jenkinsFile
@@ -4,6 +4,7 @@ pipeline {
         stage('build') {
             steps {
                 sh 'scala --version'
+                sh 'echo "Hello wordl!'
             }
         }
     }
