--- a/jenkinsFile
+++ b/jenkinsFile
@@ -1,9 +1,13 @@
 pipeline {
-    agent { docker { image 'python:3.12.0-alpine3.18' } }
+    agent any
     stages {
-        stage('build') {
+        stage('Build') {
             steps {
-                sh 'echo "Hello wordl!"'
+                sh 'echo "Hello World"'
+                sh '''
+                    echo "Multiline shell steps works too"
+                    ls -lah
+                '''
             }
         }
     }
